infrastructure/cluster/flux/reana/reana-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: reana
  name: reana
