infrastructure/cluster/flux/reana/reana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: reana
    meta.helm.sh/release-namespace: reana
    traefik.frontend.entryPoints: http,https
  name: reana-ingress
  namespace: reana
spec:
  ingressClassName: nginx
  tls:
  - secretName: cert-manager-tls-ingress-secret-reana
    hosts:
    - reana-vre.cern.ch
  rules:
  - host: reana-vre.cern.ch
    http:
      paths:
      - backend:
          service:
            name: reana-server
            port:
              number: 80
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: reana-server
            port:
              number: 80
        path: /oauth
        pathType: Prefix
      - backend:
          service:
            name: reana-ui
            port:
              number: 80
        path: /
        pathType: Prefix
